# CppPlayground

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.org  benchmark.cpp  compile_commands.json  fast.cpp  leetcode.cpp  main.cpp  run-tests.sh  run-tests.yml
.github/: run-leetcode-tests.sh
.github/workflows/: format-check.yml  run-leetcode-tests.yml  run-tests.yml
AdventOfCode2023/: day_01_part_1.cpp  day_02_part_1.cpp  day_02_part_2.cpp  day_03_part_1.cpp  day_03_part_2.cpp  day_04_part_1.cpp
AdventOfCode2024/: day_01_part_1.cpp  day_01_part_2.cpp  day_02_part_1.cpp  day_02_part_2.cpp  day_03_part_1.cpp  day_03_part_2.cpp  day_04_part_2.cpp  day_05_part_1.cpp  day_05_part_2.cpp  day_06_part_1.cpp  day_06_part_2.cpp  day_07_part_1.cpp  day_07_part_2.cpp  day_08_part_1.cpp  day_08_part_2.cpp  day_09_part_1.cpp  day_10_part_1.cpp  day_10_part_2.cpp  day_11_part_1.cpp  day_11_part_2.cpp  day_12_part_1.cpp  day_13_part_1.cpp  day_13_part_2.cpp  day_14_part_1.cpp  day_16_part_1.cpp  day_18_part_1.cpp  day_18_part_2.cpp  day_19_part_2.cpp
Algorithms/: sort.cpp
DataStructures/: copy_counter.cpp  lru_cache.cpp  ring_buffer.cpp  shared_ptr.cpp  spin_lock.cpp
Leetcode/: 1137_bis_bis.cpp  1277_bis.cpp  1493.cpp  1609.cpp  162.cpp  162_bis.cpp  162_bis_bis.cpp  1669_bis.cpp  17.cpp  1750_bis.cpp  1792.cpp  1792_bis.cpp  1792_bis_bis.cpp  1792_bis_bis_bis.cpp  1971.cpp  19_bis.cpp  1_bis_bis.cpp  20.cpp  205.cpp  2092.cpp  216_bis.cpp  2300.cpp  2300_bis.cpp  2300_bis_bis.cpp  2327.cpp  2348.cpp  238.cpp  238_bis.cpp  2709.cpp  2709_bis_bis.cpp  271.cpp  2864.cpp  2958.cpp  2962.cpp  2962_bis.cpp  3000.cpp  300_bis.cpp  300_bis_bis.cpp  300_bis_bis_bis.cpp  3191.cpp  (+25 more)
advent_of_code/2023/: day_02_part_2.cpp  day_04_part_2.cpp
advent_of_code/2024/: day_02_part_1.cpp  day_02_part_2.cpp  day_04_part_1.cpp  day_04_part_2.cpp  day_05_part_1.cpp  day_05_part_2.cpp  day_06_part_1.cpp  day_06_part_2.cpp  day_07_part_1.cpp  day_07_part_2.cpp  day_08_part_1.cpp  day_09_part_2.cpp  day_10_part_1.cpp  day_10_part_2.cpp  day_12_part_1.cpp  day_13_part_1.cpp  day_13_part_2.cpp  day_14_part_1.cpp  day_15_part_1.cpp  day_16_part_1.cpp  day_17_part_1.cpp  day_18_part_1.cpp  day_18_part_2.cpp  day_19_part_1.cpp  day_19_part_2.cpp
algorithm/: sort.cpp
algorithms/: sort.cpp
bits/: stdc++.h
conan/: profile
ds/: unique_ptr.cpp
dsa/: any.cpp  lru_cache.cpp  sfinae.cpp  sfinae_bis.cpp  shared_ptr.cpp  unique_ptr.cpp
leetcode/: 1.cpp  100.cpp  1137.cpp  1137_bis.cpp  1137_bis_bis.cpp  1189.cpp  1249.cpp  1249_bis.cpp  1277.cpp  1277_bis.cpp  1304.cpp  1317.cpp  141.cpp  141_bis.cpp  1475.cpp  1493.cpp  1544.cpp  1544_bis.cpp  1609.cpp  162.cpp  162_bis.cpp  162_bis_bis.cpp  1669.cpp  1669_bis.cpp  17.cpp  1700.cpp  1700_bis.cpp  1750.cpp  1750_bis.cpp  1792.cpp  1792_bis.cpp  1792_bis_bis.cpp  1792_bis_bis_bis_bis.cpp  17_bis.cpp  19.cpp  1971.cpp  1971_bis.cpp  19_bis.cpp  19_bis_bis.cpp  1_bis.cpp  (+100 more)
problems/: 1.cpp  1249_bis.cpp  141_bis.cpp  1609_bis.cpp  162_bis_bis.cpp  1669.cpp  1700_bis.cpp  1750.cpp  17_bis.cpp  19.cpp  19_bis_bis.cpp  201.cpp  2092.cpp  2300_bis.cpp  231.cpp  231_bis.cpp  2540.cpp  268.cpp  2709_bis_bis.cpp  2709_bis_bis_bis.cpp  2709_bis_bis_bis_bis.cpp  2864.cpp  2864_bis.cpp  287.cpp  3005.cpp  3005_bis.cpp  334_bis.cpp  347.cpp  349.cpp  349_bis_bis.cpp  442_bis.cpp  513.cpp  513_bis.cpp  525_bis_bis.cpp  543.cpp  58.cpp  713.cpp  787.cpp  791.cpp  948.cpp  (+4 more)
scratch/: assembly.cpp  benchmark.cpp  fast.cpp  test.cpp  tests.cpp
scripts/: bench-remote.sh  run-leetcode-tests.sh
